--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="css-34 h.w/index.html">Урок 34</a>
+                        <a href="css-34hw/index.html">Урок 34</a>
                     </li>
                 </ul>
             </div>
